[package]
name = "leaktk-scanner"
version = "0.0.0"
edition = "2021"
license = "MIT" 
description = "A secrets scanner"
documentation = "https://github.com/leaktk/scanner"
homepage = "https://github.com/leaktk/scanner"
repository = "https://github.com/leaktk/scanner"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
ring = "0.16"
log = { version = "0.4.17", features = ["std", "serde"] }
time = "0.3.17"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
directories = "4.0"